# tarnished

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/app/: app_parts.rs  app_widgets.rs  mod.rs
src/parser/: mod.rs  tests.rs
src/parser/test_files/: AB626963.fna
src/utils/: mod.rs
