[package]
name = "tarnished"
version = "0.1.0"
edition = "2021"
author = "Miłosz Chodkowski"
description = "Very simple CLI app for testing the percent of nucleotides in FASTA files"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/777moneymaker/blackie.git"
homepage = "https://github.com/777moneymaker/blackie"
keywords = ["black", "graphics", "image", "pixels", "true-black"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
clap = "~2.27.0"
anyhow = "1.0.68"
bio = "1.1.0"